tests/ui/simd/simd-lane-limit-err-npow2.stderr
error: the SIMD type `V<i32, 6>` has more elements than the limit 4
  --> $DIR/simd-lane-limit-err-npow2.rs:10:9
   |
LL |     let _a: V<i32, 6> = V([0; 6]);
   |         ^^

error: aborting due to 1 previous error

